Fix k. dpen. dropdown select error, start add new k. d.pen

--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -165,95 +165,95 @@ else
                         </div>
                     </div>*@
 
-            <fieldset class="pure-control-group">
-                <legend>
-                    @Resources.SA
-                </legend>
-                <template id="serviceAccountrow">
-                    <div class="row service-account-details">
-                        <div class=" col pure-control-group" style="display:none;">
-                            <label> @Resources.SA_ID </label>
-                            <input id="ServiceAccounts[i].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
+                <fieldset class="pure-control-group">
+                    <legend>
+                        @Resources.SA
+                    </legend>
+                    <template id="serviceAccountrow">
+                        <div class="row service-account-details">
+                            <div class=" col pure-control-group" style="display:none;">
+                                <label> @Resources.SA_ID </label>
+                                <input id="ServiceAccounts[i].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
+                            </div>
+                            <div class="col pure-control-group">
+                                <label> @Resources.SA_Name </label>
+                                <input id="ServiceAccounts[i].ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
+                                <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                            </div>
+                            <div class="col pure-control-group">
+                                <label> @Resources.SA_InPassManager </label>
+                                <input type="checkbox" id="ServiceAccounts[i].InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                            </div>
+                            <div class="col pure-control-group">
+                                <label> @Resources.SA_PassLastUpdated </label>
+                                <input type="datetime" id="ServiceAccounts[i].PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
+                            </div>
                         </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_Name </label>
-                            <input id="ServiceAccounts[i].ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
-                            <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                        </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_InPassManager </label>
-                            <input type="checkbox" id="ServiceAccounts[i].InPassManager" name="ServiceAccounts[{i}].InPassManager" />
-                        </div>
-                        <div class="col pure-control-group">
-                            <label> @Resources.SA_PassLastUpdated </label>
-                            <input type="datetime" id="ServiceAccounts[i].PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
-                        </div>
-                    </div>
-                </template>
+                    </template>
                     @*@Html.ActionLink(" ", "Delete", new { id = ServiceAccounts[i].Id }, new { @class = "delete", title = Resources.Grid_Delete }), style: "action"));*@
 
                     <!--</div>-->
                     @*@{@Model.ServiceAccounts ServiceAccountList = new Model.ServiceAccounts();
-                Bonobo.Git.Server.Data.ServiceAccount newServiceAccount = new Bonobo.Git.Server.Data.ServiceAccount();
-                newServiceAccountList[0] = newServiceAccount;
-            }*@
+                            Bonobo.Git.Server.Data.ServiceAccount newServiceAccount = new Bonobo.Git.Server.Data.ServiceAccount();
+                            newServiceAccountList[0] = newServiceAccount;
+                        }*@
                     @*var newServiceAccount = new Bonobo.Git.Server.Data.ServiceAccount
-            {
-                Id = Model.ServiceAccounts.Count,
-                ServiceAccountName = "",
-                InPassManager = false,
-                PassLastUpdated = DateTime.Now
-            };
-            var newServiceAccounts = Model.ServiceAccounts; /*new Bonobo.Git.Server.Models.RepositoryDetailModel*/
-            newServiceAccounts.Clear();
-            newServiceAccounts[0] = newServiceAccount;*@
+                        {
+                            Id = Model.ServiceAccounts.Count,
+                            ServiceAccountName = "",
+                            InPassManager = false,
+                            PassLastUpdated = DateTime.Now
+                        };
+                        var newServiceAccounts = Model.ServiceAccounts; /*new Bonobo.Git.Server.Models.RepositoryDetailModel*/
+                        newServiceAccounts.Clear();
+                        newServiceAccounts[0] = newServiceAccount;*@
 
 
 
 
 
                     @*@Model.ServiceAccounts.Append(newServiceAccount);*@
-                    
-                
 
-                @if (Model != null)
-                {
-                    for (int i = 0; i < Model.ServiceAccounts.Count; i++)
+
+
+                    @if (Model != null)
                     {
+                        for (int i = 0; i < Model.ServiceAccounts.Count; i++)
+                        {
 
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
-                        </div>
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
-                            @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
-                        </div>
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                        </div>
-                        <div class="pure-control-group" style="display:none;">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].Id)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
-                            @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
-                        </div>
-                        
+                            <div class="pure-control-group">
+                                @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                            </div>
+                            <div class="pure-control-group">
+                                @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
+                                @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
+                                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
+                            </div>
+                            <div class="pure-control-group">
+                                @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                                @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                                @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                            </div>
+                            <div class="pure-control-group" style="display:none;">
+                                @Html.LabelFor(m => m.ServiceAccounts[i].Id)
+                                @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
+                                @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
+                                @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
+                            </div>
+
+                        }
+                        @*<div class="pure-control-group">
+                                <button href="@Url.Action("AddServiceAccount")" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> Add Service Account </button>
+                            </div>*@
+
+
+
                     }
-                    @*<div class="pure-control-group">
-                <button href="@Url.Action("AddServiceAccount")" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> Add Service Account </button>
-            </div>*@
 
-
-
-                }
-
-            </fieldset>
+                </fieldset>
 
                 <div class="pure-control-group">
                     <button type="button" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
@@ -262,17 +262,29 @@ else
                     <legend>
                         Dependencies
                     </legend>
+
                     @for (int i = 0; i < Model.Dependencies.Count; i++)
                     {
                         <div class="pure-control-group">
-                            @Html.LabelFor(m => m.Dependencies[i].KnownDependency.ComponentName)        @*turn this into a dropdown, need to search all known dependencies in database*@
-                            @Html.HiddenFor(m => m.Dependencies[i].KnownDependency.ComponentName)
+                            @Html.LabelFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                             @Html.ValidationMessageFor(m => m.Dependencies[i].KnownDependency.ComponentName)
                             @{
-                                var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;         // need to figure out how to save the known dep id within the dependencies table, not the known dep table, and how to change selected value
-                                @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items@*, new { @selectedValue = Model.Dependencies[i].KnownDependency.Id.ToString() }*@);
-                                @*@Html.DropDownList("Repositories", items, Resources.Repository_Go_To_Dropdown, new { @class = "repositories", @onChange = "javascript:location.href=this.options[this.selectedIndex].value;" });*@
-                                @*@Html.DropDownList("Component Name", items, Model.Dependencies[i].KnownDependency.ComponentName, new { @class = "componentNames", @onChange = "javascript:Model.Dependencies[i].KnownDependenciesId=this.options[this.selectedIndex].value;" });*@
+                                var items = (IEnumerable<SelectListItem>)Html.ViewBag.KnownDependencies;
+                                for (int j = 0; j < items.Count(); j++)
+                                {
+                                    if (items.ToList()[j].Value == Model.Dependencies[i].KnownDependency.Id.ToString())
+                                    {
+                                        items.ToList()[j].Selected = true;
+                                    }
+                                    else
+                                    {
+                                        items.ToList()[j].Selected = false;
+                                    }
+                                    <div id="compNameNewInputField" style="display: none;">
+                                        <input />
+                                    </div>
+                                }
+                                @Html.DropDownListFor(m => m.Dependencies[i].KnownDependenciesId, items, new { @onChange = "javascript: DisplayComponentNameNewInputField(this.options[this.selectedIndex].text)" });
                             }
                         </div>
                         <div class="pure-control-group">
@@ -294,13 +306,21 @@ else
                     }
                 </fieldset>
 
-                    <div class="pure-controls">
-                        <a class="pure-button" href="@Url.Action("Tree", new { id = Model.Id, ServiceAccounts = Model.ServiceAccounts })"><i class="fa fa-long-arrow-left"></i> @Resources.Repository_Edit_Back</a>
-                        <button type="submit" class="pure-button pure-button-primary save"><i class="fa fa-save"></i> @Resources.Repository_Edit_Submit</button>
-                    </div>
-                </fieldset>
-                <script src="~/scripts/ServiceAccountsEdit.js" asp-append-version="true"></script>
-                }
-                </text>
-            }
+                <div class="pure-controls">
+                    <a class="pure-button" href="@Url.Action("Tree", new { id = Model.Id, ServiceAccounts = Model.ServiceAccounts })"><i class="fa fa-long-arrow-left"></i> @Resources.Repository_Edit_Back</a>
+                    <button type="submit" class="pure-button pure-button-primary save"><i class="fa fa-save"></i> @Resources.Repository_Edit_Submit</button>
+                </div>
+            </fieldset>
+            <script src="~/scripts/ServiceAccountsEdit.js" asp-append-version="true"></script>
+        }
+    </text>
+}
+
+<script>
+    function DisplayComponentNameNewInputField(text) {
+        if (text == "Add New...") {
+            $("#compNameNewInputField").css("display", "block");
+        }
+    }
+</script>
 
