Adds ability to add service accounts while creating repo

--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -100,29 +100,40 @@
             @Resources.SA
         </legend>
         <template id="serviceAccountrow">
-            <div class="pure-control-group service-account-details">
-                <div class="pure-control-group" style="display:none;">
+            <div class="row service-account-details" id="service-account-details" name="service-account-details">
+                <div class=" col pure-control-group" style="display:none;">
                     <label> @Resources.SA_ID </label>
-                    <input id="ServiceAccounts[i].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
+                    <input class="form-control" id="ServiceAccounts_{i}__.Id" name="ServiceAccounts[{i}].Id" readonly disabled />
                 </div>
-                <div class="pure-control-group">
+                <div class="col pure-control-group">
                     <label> @Resources.SA_Name </label>
-                    <input id="ServiceAccounts[i].ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
+                    <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
+                    <span class="field-validation-valid text-danger"
+                          data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
+                          data-valmsg-replace="true">
+                    </span>
                     <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
                 </div>
-                <div class="pure-control-group">
+                <div class="col pure-control-group">
                     <label> @Resources.SA_InPassManager </label>
-                    <input type="checkbox" id="ServiceAccounts[i].InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                    <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                    <span class="field-validation-valid text-danger"
+                          data-valmsg-for="ServiceAccounts[{i}].InPassManager"
+                          data-valmsg-replace="true">
+                    </span>
                 </div>
-                <div class="pure-control-group">
+                <div class="col pure-control-group">
                     <label> @Resources.SA_PassLastUpdated </label>
-                    <input type="datetime" id="ServiceAccounts[i].PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
+                    <input class="form-control" type="datetime" id="ServiceAccounts_{i}__.PassLastUpdated" name="ServiceAccounts[{i}].PassLastUpdated" value="1/1/1900 12:00:00 AM" />
+                    <span class="field-validation-valid text-danger"
+                          data-valmsg-for="ServiceAccounts[{i}].PassLastUpdated"
+                          data-valmsg-replace="true">
+                    </span>
                 </div>
-                <button type="button" class="pure-button pure-button-primary"><i style="color:red;" class="fa fa-minus-circle"></i> @Resources.Delete_Confirm</button>
             </div>
         </template>
-
-        @if (Model != null && Model.ServiceAccounts != null)
+      
+        @if (Model != null && Model.ServiceAccounts != null )
         {
             for (int i = 0; i < Model.ServiceAccounts.Count; i++)
             {
@@ -131,7 +142,7 @@
                     @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
                     @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
                     @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                    <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                    <a href="@Url.Action("DeleteSa", new {ServiceAccounts = Model.ServiceAccounts[i] })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>
                 </div>
                 <div class="pure-control-group">
                     @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
@@ -146,12 +157,14 @@
                 <div class="pure-control-group" style="display:none;">
                     @Html.LabelFor(m => m.ServiceAccounts[i].Id)
                     @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
-                    @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
-                    @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
                 </div>
             }
         }
+
     </fieldset>
+    <div class="pure-control-group">
+        <button type="button" onclick=" newField(0);" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
+    </div>
 
     <div class="pure-controls">
         <a class="pure-button" href="@Url.Action("Index")"><i class="fa fa-long-arrow-left"></i> @Resources.Repository_Back</a>
