--- a/Bonobo.Git.Server/Views/Repository/Create.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Create.cshtml
@@ -100,23 +100,24 @@
             @Resources.SA
         </legend>
         <template id="serviceAccountrow">
-            <div class="row service-account-details" id="service-account-details" name="service-account-details">
+            <div class="row service-account-details" id="ServiceAccounts_{i}" name="service-account-details">
                 <div class=" col pure-control-group" style="display:none;">
                     <label> @Resources.SA_ID </label>
-                    <input class="form-control" id="ServiceAccounts_{i}__.Id" name="ServiceAccounts[{i}].Id" readonly disabled />
+                    <input class="form-control" id="ServiceAccounts[{i}].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
                 </div>
                 <div class="col pure-control-group">
-                    <label> @Resources.SA_Name </label>
+                    <label> @Resources.SA_Name </label> @*"name" handels the backend with class form-control / {i} is replaced in javascipt by the needed index*@
                     <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
                     <span class="field-validation-valid text-danger"
                           data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
                           data-valmsg-replace="true">
                     </span>
-                    <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                    <button type="button" onclick="remField(this.id);" id=" ServiceAccountBtn_{i}" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                    @*<a href="@Url.Action("DeleteSa", new {ServiceAccounts = Model.ServiceAccounts[i] })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>*@
                 </div>
                 <div class="col pure-control-group">
                     <label> @Resources.SA_InPassManager </label>
-                    <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                    <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" value="true" data-val="true" data-val-required="The InPassManager field is required." />
                     <span class="field-validation-valid text-danger"
                           data-valmsg-for="ServiceAccounts[{i}].InPassManager"
                           data-valmsg-replace="true">
@@ -133,34 +134,6 @@
             </div>
         </template>
       
-        @if (Model != null && Model.ServiceAccounts != null )
-        {
-            for (int i = 0; i < Model.ServiceAccounts.Count; i++)
-            {
-
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                    @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                    <a href="@Url.Action("DeleteSa", new {ServiceAccounts = Model.ServiceAccounts[i] })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>
-                </div>
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
-                    @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
-                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
-                </div>
-                <div class="pure-control-group">
-                    @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                    @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                    @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                </div>
-                <div class="pure-control-group" style="display:none;">
-                    @Html.LabelFor(m => m.ServiceAccounts[i].Id)
-                    @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
-                </div>
-            }
-        }
-
     </fieldset>
     <div class="pure-control-group">
         <button type="button" onclick=" newField(0);" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> @Resources.SA_Add </button>
