--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -137,56 +137,29 @@ else
                     <i class="fa fa-info-circle" title="@Resources.Repository_TeamsHint"></i>
                 </div>
 
-                @*<div class="sidebar-bordergrid">
-                        <label>
-                            Dependencies
-                        </label>
-                        <div>
-                            @foreach (Bonobo.Git.Server.Data.Dependency dependency in Model.Dependencies)
-                            {
-                                <details style="display:inline-block;">
-                                    <summary>
-                                        <div class="sidebar-text">
-                                            <i class="fa fa-chevron-down"></i><input class="removeVisualInput" value="@dependency.ComponentName (@dependency.VersionInUse)" readonly />
-                                        </div>
-                                    </summary>
-                                    <div class="pass-info">
-                                        <div class="pure-control-group">
-                                            <label>
-                                                Date Last Updated
-                                            </label>
-                                            <div class="sidebar-text">
-                                                <input class="removeVisualInput" value="@dependency.DateUpdated" readonly />
-                                            </div>
-                                        </div>
-                                    </div>
-                                </details>
-                            }
-                        </div>
-                    </div>*@
-
             <fieldset class="pure-control-group">
                 <legend>
                     @Resources.SA
                 </legend>
                 <template id="serviceAccountrow">
-                    <div class="row service-account-details" id="service-account-details" name="service-account-details">
+                    <div class="row service-account-details" id="ServiceAccounts_{i}" name="service-account-details">
                         <div class=" col pure-control-group" style="display:none;">
                             <label> @Resources.SA_ID </label>
                             <input class="form-control" id="ServiceAccounts[{i}].Id" name="ServiceAccounts[{i}].Id" readonly disabled />
                         </div>
                         <div class="col pure-control-group">
-                            <label> @Resources.SA_Name </label>
+                            <label> @Resources.SA_Name </label> @*"name" handels the backend with class form-control / {i} is replaced in javascipt by the needed index*@
                             <input class="form-control" id="ServiceAccounts_{i}__.ServiceAccountName" name="ServiceAccounts[{i}].ServiceAccountName" />
                             <span class="field-validation-valid text-danger"
                                   data-valmsg-for="ServiceAccounts[{i}].ServiceAccountName"
                                   data-valmsg-replace="true">
                             </span>
-                            <button style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                            <button type="button" onclick="remField(this.id);" id=" ServiceAccountBtn_{i}" style="background-color: white; border: none;"><i style="color:red;" class="fa fa-minus-circle"></i></button>
+                            @*<a href="@Url.Action("DeleteSa", new {ServiceAccounts = Model.ServiceAccounts[i] })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>*@
                         </div>
                         <div class="col pure-control-group">
                             <label> @Resources.SA_InPassManager </label>
-                            <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" />
+                            <input class="form-control" type="checkbox" id="ServiceAccounts_{i}__.InPassManager" name="ServiceAccounts[{i}].InPassManager" value="true" data-val="true" data-val-required="The InPassManager field is required."/>
                             <span class="field-validation-valid text-danger"
                                   data-valmsg-for="ServiceAccounts[{i}].InPassManager"
                                   data-valmsg-replace="true">
@@ -202,57 +175,39 @@ else
                         </div>
                     </div>
                 </template>
-                @*@Html.ActionLink(" ", "Delete", new { id = ServiceAccounts[i].Id }, new { @class = "delete", title = Resources.Grid_Delete }), style: "action"));*@
-
-                <!--</div>-->
-                @*@{@Model.ServiceAccounts ServiceAccountList = new Model.ServiceAccounts();
-            Bonobo.Git.Server.Data.ServiceAccount newServiceAccount = new Bonobo.Git.Server.Data.ServiceAccount();
-            newServiceAccountList[0] = newServiceAccount;
-        }*@
-                @*@{
-                    var newServiceAccount = new Bonobo.Git.Server.Data.ServiceAccount
-                    {
-                        Id = ,
-                        ServiceAccountName = ,
-                        InPassManager = ,
-                        PassLastUpdated = 
-                    };
-                    var newServiceAccounts = Model.ServiceAccounts; /*new Bonobo.Git.Server.Models.RepositoryDetailModel*/
-                    newServiceAccounts.Clear();
-                    newServiceAccounts[0] = newServiceAccount;
-
-                    @Model.ServiceAccounts.Append(newServiceAccount);
-                }*@
 
 
                     @if (Model != null)
                     {
                         for (int i = 0; i < Model.ServiceAccounts.Count; i++)
                         {
+                            var id = "ServiceAccounts_" + i;
+                           <div id="@id">
+                               <div class="pure-control-group">
+                                   @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                   @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                   @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
+                                   @*<button type="button" onclick=" remField(@i);" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></button>*@
 
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].ServiceAccountName)
-                            <a href="@Url.Action("DeleteSa", new {ServiceAccounts = Model.ServiceAccounts[i] })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>
-                        </div>
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
-                            @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
-                        </div>
-                        <div class="pure-control-group">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                            @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
-                        </div>
-                        <div class="pure-control-group" style="display:none;">
-                            @Html.LabelFor(m => m.ServiceAccounts[i].Id)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
-                            @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
-                            @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
-                        </div>
-
+                                   <a href="@Url.Action("DeleteSa", new { id = Model.ServiceAccounts[i].Id })" style="background-color: white; border: none;" type="button"><i style="color:red;" class="fa fa-minus-circle"></i></a>
+                               </div>
+                               <div class="pure-control-group">
+                                   @Html.LabelFor(m => m.ServiceAccounts[i].InPassManager)
+                                   @Html.CheckBoxFor(m => m.ServiceAccounts[i].InPassManager)
+                                   @Html.ValidationMessageFor(m => m.ServiceAccounts[i].InPassManager)
+                               </div>
+                               <div class="pure-control-group">
+                                   @Html.LabelFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                                   @Html.TextBoxFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                                   @Html.ValidationMessageFor(m => m.ServiceAccounts[i].PassLastUpdated)
+                               </div>
+                               <div class="pure-control-group" style="display:none;">
+                                   @Html.LabelFor(m => m.ServiceAccounts[i].Id)
+                                   @Html.TextBoxFor(m => m.ServiceAccounts[i].Id)
+                                   @Html.LabelFor(m => m.ServiceAccounts[i].RepositoryId)
+                                   @Html.TextBoxFor(m => m.ServiceAccounts[i].RepositoryId)
+                               </div>
+                           </div>
                     }
                     @*<div class="pure-control-group">
                 <button href="@Url.Action("AddServiceAccount")" onclick=" newField();" class="pure-button pure-button-primary"> <i class="fa fa-plus-circle"></i> Add Service Account </button>
@@ -320,11 +275,11 @@ else
                     <button type="submit" class="pure-button pure-button-primary save"><i class="fa fa-save"></i> @Resources.Repository_Edit_Submit</button>
                 </div>
             </fieldset>
-            <script src="~/scripts/ServiceAccountsEdit.js" asp-append-version="true"></script>
+            
         }
     </text>
 }
-
+<script src="~/scripts/ServiceAccountsEdit.js"></script>
 <script>
     function DisplayComponentNameNewInputField(text) {
         if (text == "Add New...") {
