Delete directed to Edit View

--- a/Bonobo.Git.Server/Views/Repository/Edit.cshtml
+++ b/Bonobo.Git.Server/Views/Repository/Edit.cshtml
@@ -249,7 +249,7 @@ else
                                     </div>
                                 }*@
                                 var DepenId = Model.Dependencies[i].Id;
-                                <a class="pure-button" href="@Url.Action("DeleteDepenAction", "Repository", new {id = @DepenId})"><i style="color:red;" class="fa fa-minus-circle"></i></a>
+                                <a class="pure-button" href="@Url.Action("DeleteDepenAction", "Repository", new {Rid=Model.Id, id = @DepenId})"><i style="color:red;" class="fa fa-minus-circle"></i></a>
                             }
                         </div>
                         <div class="pure-control-group">
